# portfolio-website

./: Chemical Engineering Lab Simulator.html  LICENSE  README.md  bioplastic.html  deep-space-explorer-heavygfx.html  gallery.html  gallery.js  hartree-fock.html  index.html  laboratory-project.html  package.json  script.js  styles.css
LabProtocolSimulator/: .gitignore  README.md  README_ANDROID.md  app.py  fix_plots.py  pyproject.toml  repybridge.py  run.py  start_app.bat  utils.py
LabProtocolSimulator/attached_assets/: Experiment 5 crusher and ball mill.xlsx  exp 8 centrifuge.docx  exp 9 classifier.xlsx  exp7 vaccum filter.docx  exp7 vaccum filter.xlsx  exp8 centrifuge.xlsx  exp9 classifier.docx
LabProtocolSimulator/chemengsim/: __init__.py  __main__.py  android_app.py  api.py  app.py  chat.py  utils.py
LabProtocolSimulator/chemengsim/experiments/: __init__.py  batch_reactor.py  centrifuge_flotation.py  classifiers.py  crushers.py  cstr.py  filter_press.py  pfr.py  rotary_vacuum_filter.py  semi_batch_reactor.py  trommel.py
LabProtocolSimulator/chemengsim/experiments/batch_reactor/: __init__.py
LabProtocolSimulator/chemengsim/quizzes/: __init__.py
LabProtocolSimulator/chemengsim/report_generation/: __init__.py  basket_centrifuge.py  classifiers.py  froth_flotation.py  main.py  report_generator.py  report_utils.py  rotary_vacuum_filter.py
LabProtocolSimulator/chemengsim/report_generation/output/: cone_classifier_report_20250403_112043.docx  (+1 more)
LabProtocolSimulator/chemengsim/videos/: __init__.py  create_placeholders.py  create_simple_videos.py  create_videos.py  demo_videos.py
LabProtocolSimulator/experiments/: batch_reactor.py  centrifuge_flotation.py  classifiers.py  crushers.py  cstr.py  filter_press.py  pfr.py  rotary_vacuum_filter.py  semi_batch_reactor.py  trommel.py
LabProtocolSimulator/function_explain/: README.md  demo_video.md  quiz.md  report_generation.md  simulation.md
LabProtocolSimulator/quizzes/: quiz_module.py
phaser-space-explorer/: game.js  (+1 more)
(+12 files in other folders)
